Add CacheFileReader, DataBlockSummerizer and HistoricDataVisualizer, update ExtractedData.txt, update pom.xml